<resources>

    <string name="app_name"><font color='#373737'>NATOUR</font></string>

    <!-- Activity_Run -->
    <string name="activityRun_slogan"><font color='#373737'>Adventure awaits, go find it!</font></string>
    <string name="activityRun_signin">Sign in</string>
    <string name="activityRun_noaccountyet"><font color='#373737'>No account yet?</font><font color='#43DE70'> Sign up</font></string>

    <!-- Activity_Auth -->
    <string name="activityAuth_username">Username</string>
    <string name="activityAuth_password">Password</string>
    <string name="activityAuth_emailid">Email ID</string>
    <string name="activityAuth_retypepassword">Re-type password</string>
    <string name="activityAuth_signingoogle">Sign in with Google</string>
    <string name="activityAuth_signinfacebook">Sign in with Facebook</string>
    <string name="activityAuth_orsigninwith">Or, sign in with</string>
    <string name="activityAuth_signup">Sign up</string>
    <string name="activityAuth_terms">By signing up, you agree to our Terms &amp; Privacy Policy.</string>
    <string name="activityAuth_forgotpassword">Forgot your password?</string>
    <string name="activityAuth_alreadyhaveanaccount"><font color='#373737'>Already have an account?</font><font color='#88B27E'> Sign in</font></string>

    <!-- Activity_Pin -->
    <string name="activityPin_title">Email verification</string>
    <string name="activityPin_message">We have sent code to your email:</string>
    <string name="activityPin_mail">email@email.x</string>
    <string name="activityPin_codemessage">Didn\'t receive code?</string>
    <string name="activityPin_verifyaccount">Verify account</string>
    <string name="activityPin_resend">Resend</string>

    <!-- Activity_ResetPwd -->
    <string name="ResetCR_message1">Enter your username and we will send you instructions to your email to reset your password</string>
    <string name="ResetCR_continue">Continue</string>
    <string name="ResetCR_backto">Back to sign in</string>
    <string name="ResetCR_title2">Type your code</string>
    <string name="ResetCR_password">New password</string>
    <string name="ResetCR_message2">Enter the code that was sent by email to reset your account</string>
    <string name="ResetCR_message3">Set your new password so you can login and access Natour</string>
    <string name="ResetCR_title3">Create new password</string>

    <string name="server_client_id">556927589955-0jgcao4tfbrllnjie8c5b1qr8nlce0mo.apps.googleusercontent.com</string>

    <!-- Activity home -->
    <string name="activityHome_welcome">Welcome back,</string>
    <string name="activityHome_username">username</string>
    <string name="activityHome_myroutes">My routes</string>
    <string name="activityHome_favorites">Favourites</string>
    <string name="activityHome_tovisit">To visit</string>
    <string name="activityHome_routecollection">Route collection</string>
    <string name="activityHome_editprofilephoto">Edit profile photo</string>
    <string name="activityHome_changepassword">Change password</string>
    <string name="activityHome_logout">Logout</string>
    <string name="post_addtovisit">Add to the routes to visit</string>
    <string name="post_report">Report</string>
    <string name="post_reported">Reported</string>
    <string name="post_likes">likes</string>


    <!-- Activity_Chat -->
    <string name="chat_api_key">rkchhba9v9df</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="activityChat_users">Users</string>

    <!-- Activity Create path -->
    <string name="activityCreateRoute_create">Create route</string>
    <string name="activityCreateRoute_message">Fill in the fields to create your route.</string>
    <string name="activityCreateRoute_name">Route name</string>
    <string name="activityCreateRoute_length">Route duration (Format in minutes)</string>
    <string name="activityCreateRoute_addimage">Add route image</string>
    <string name="activityCreateRoute_image">Image</string>
    <string name="activityCreateRoute_description">Description</string>
    <string name="activityCreateRoute_difficulty">Select the difficulty</string>
    <string name="activityCreateRoute_disableOption">Accessibility for the disabled</string>
    <string name="activityCreateRoute_tags">Tags</string>
    <string name="activityCreateRoute_all">All</string>
    <string name="activityCreateRoute_easy">Easy</string>
    <string name="activityCreateRoute_medium">Medium</string>
    <string name="activityCreateRoute_hard">Hard</string>
    <string name="activityCreateRoute_extreme">Extreme</string>
    <string name="activityCreateRoute_addtag">Add tag</string>
    <string name="activityCreateRoute_duration">Duration</string>
    <string name="activityCreateRoute_continue">Continue</string>

    <!-- Activity_MapActivity -->
    <string name="activityMap_addroute">Add route</string>
    <string name="activityMap_viewroutes">View routes</string>

    <!-- Success / Error Dialog -->
    <string name="dialogError_error">Error</string>
    <string name="dialogSuccess_success">Success</string>
    <string name="dialog_ok">Okay</string>

    <!-- Activity Change password -->
    <string name="activityChangePwd_title">Change password</string>
    <string name="activityChangePwd_current">Current password</string>
    <string name="activityChangePwd_new">New password</string>
    <string name="activityChangePwd_confirm">Confirm new password</string>
    <string name="activityChangePwd_submit">Submit</string>
    <string name="title_activity_detailed_map">DetailedMap</string>

    <!-- Activity Report -->
    <string name="activityReport_message">Fill in the fields to report the route.</string>
    <string name="activityReport_send">Send</string>
    <string name="activityReport_title">Title</string>
    <string name="activityReport_description">Description</string>
    <string name="activityReport_type">Select report type</string>
    <string name="activityReport_inaccurate">Inaccurate</string>
    <string name="activityReport_outofddate">Out of date</string>
    <string name="activityReport_success">Route has been reported</string>
    <string name="activityReport_error">An error occurred while reporting the route</string>
    <string name="activityReport_notitleordescription">Please insert title and description</string>

    <!-- Activity Admin -->
    <string name="activityAdmin_message">Fill in the fields to send the promotional email to users.</string>
    <string name="activityAdmin_send">Send email</string>
    <string name="activityAdmin_subject">Subject</string>
    <string name="activityAdmin_object">Object</string>
    <string name="activityAdmin_success">Email has been sent</string>
    <string name="activityAdmin_error">An error occurred while sending email</string>
    <string name="activityAdmin_nosubjectorobject">Please insert subject and object</string>

    <!-- Activity Compilation -->
    <string name="activityCreateCompilation_title">Title</string>
    <string name="activityCreateCompilation_description">Description</string>
    <string name="activityCreateCompilation_create">Create</string>
    <string name="activityCreateCompilation_message">Fill in the fields to create the compilation.</string>
    <string name="activityCreateCompilation_header">Create compilation</string>

    <!-- Activity Research -->
    <string name="activitySearch_title">Search routes</string>
    <string name="activitySearch_message">Fill the filters that you want to use</string>
    <string name="activitySearch_name">Route name</string>
    <string name="activitySearch_location">Location</string>
    <string name="activitySearch_range">Range in km</string>
    <string name="activitySearch_minduration">Minimum duration (in minutes)</string>
    <string name="activitySearch_difficulty">Difficulties</string>
    <string name="activitySearch_disability">Accessibility for the disabled</string>
    <string name="activitySearch_tags">Tags</string>
    <string name="activitySearch_search">Search</string>
    <string name="activitySearch_ok">Ok</string>
    <string name="activitySearch_cancel">Remove filters</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_normal">Search by route name</string>
    <string name="search_geo">Search by map</string>
    <string name="select">Select</string>
    <string name="search_or">Or</string>

    <!-- Dialog help -->
    <string name="dialogHelp_title">How to add route</string>
    <string name="dialogHelp_message">Click on the map to add start point, to add intermediate points: click again.</string>
    <string name="dialogHelp_message2">Longclick on the map to add the end point</string>

    <!-- Errori -->
    <string name="error_EmptyFields">One or more fields are missing</string>


</resources>