<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:background="@drawable/background_alert_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/activitySearch_range"
        android:textColor="@color/natour_black"
        android:textSize="18sp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/activitySearch_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="64dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="6371" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/activitySearch_minduration"
        android:textColor="@color/natour_black"
        android:textSize="18sp" />

    <com.google.android.material.slider.Slider
        android:id="@+id/activitySearch_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="64dp"
        android:stepSize="1"
        android:valueFrom="0"
        android:valueTo="720" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/activitySearch_difficulty"
        android:textColor="@color/natour_black"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/activitySearch_easy"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/background_radiobutton"
            android:button="@null"
            android:checked="false"
            android:text="@string/activityCreateRoute_easy"
            android:textAlignment="center"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/activitySearch_medium"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="32dp"
            android:background="@drawable/background_radiobutton"
            android:button="@null"
            android:checked="false"
            android:text="@string/activityCreateRoute_medium"
            android:textAlignment="center"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/activitySearch_hard"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_radiobutton"
            android:button="@null"
            android:checked="false"
            android:text="@string/activityCreateRoute_hard"
            android:textAlignment="center"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/activitySearch_extreme"
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:background="@drawable/background_radiobutton"
            android:button="@null"
            android:checked="false"
            android:text="@string/activityCreateRoute_extreme"
            android:textAlignment="center"
            android:textSize="18sp" />

    </RelativeLayout>

    <CheckBox
        android:id="@+id/activitySearch_disability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:background="@color/natour_transparent"
        android:button="@null"
        android:checked="false"
        android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
        android:drawablePadding="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/activitySearch_disability"
        android:textColor="@color/natour_black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/activitySearch_tags"
            android:textColor="@color/natour_black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/activitySearch_addtag"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/background_add_tag"
            android:hint="@string/activityCreateRoute_addtag"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingHorizontal="12dp"
            android:paddingVertical="3dp"
            android:singleLine="true"
            android:textColor="@color/natour_grey"
            android:textColorHint="@color/natour_grey"
            android:textSize="13sp" />

    </LinearLayout>

    <me.gujun.android.taggroup.TagGroup
        android:id="@+id/activitySearch_taggroup"
        style="@style/TagGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp">

        <android.widget.Button
            android:id="@+id/activitySearch_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/activitySearch_ok"
            android:layout_marginEnd="96dp"
            android:background="@color/natour_transparent"
            android:text="@string/activitySearch_cancel"
            android:textColor="@color/natour_green"
            android:textSize="18sp" />

        <android.widget.Button
            android:id="@+id/activitySearch_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/natour_transparent"
            android:text="@string/activitySearch_ok"
            android:textColor="@color/natour_green"
            android:textSize="18sp" />

    </RelativeLayout>


</LinearLayout>