<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:minWidth="300dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@android:color/white">

    <android.widget.Button
        android:id="@+id/selectSearch_normal"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_button_signin"
        android:stateListAnimator="@null"
        android:text="@string/search_normal"
        android:textAllCaps="false"
        android:textColor="@color/natour_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_or"/>

    <android.widget.Button
        android:id="@+id/selectSearch_Geo"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button_signin"
        android:stateListAnimator="@null"
        android:text="@string/search_geo"
        android:textAllCaps="false"
        android:textColor="@color/natour_white" />

</LinearLayout>