<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activityCreatePath_Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".map.CreatePathActivity">

    <ImageButton
        android:id="@+id/activityCreatePath_backbutton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:elevation="10dp"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/activityCreateRoute_create"
        android:textColor="@color/natour_black"
        android:textSize="36sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/activityCreateRoute_message"
        android:textColor="@color/natour_black"
        android:textSize="18sp" />

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginVertical="16dp"
        android:background="@drawable/drawable_divider_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="sans-serif"
                android:text="@string/activityCreateRoute_name"
                android:textColor="@color/natour_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/activityCreatePath_title"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text"
                android:fontFamily="sans-serif-light"
                android:inputType="text"
                android:maxLength="32"
                android:paddingHorizontal="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/activityCreateRoute_description"
                android:textColor="@color/natour_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/activityCreatePath_description"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text"
                android:fontFamily="sans-serif-light"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:maxLength="255"
                android:singleLine="false" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/activityCreateRoute_difficulty"
                android:textColor="@color/natour_black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/activityCreatePath_easy"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:background="@drawable/background_radiobutton"
                    android:button="@null"
                    android:checked="true"
                    android:text="@string/activityCreateRoute_easy"
                    android:textAlignment="center"
                    android:textColor="@color/natour_white"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/activityCreatePath_medium"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="32dp"
                    android:background="@drawable/background_radiobutton"
                    android:button="@null"
                    android:text="@string/activityCreateRoute_medium"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/activityCreatePath_hard"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:background="@drawable/background_radiobutton"
                    android:button="@null"
                    android:text="@string/activityCreateRoute_hard"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/activityCreatePath_extreme"
                    android:layout_width="130dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="32dp"
                    android:background="@drawable/background_radiobutton"
                    android:button="@null"
                    android:text="@string/activityCreateRoute_extreme"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/activityCreateRoute_length"
                android:textColor="@color/natour_black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/activityCreatePath_duration"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/background_edit_text"
                android:fontFamily="sans-serif-light"
                android:inputType="number"
                android:paddingHorizontal="16dp" />

            <TextView
                android:id="@+id/activityCreatePath_imagetext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/activityCreateRoute_image"
                android:textColor="@color/natour_black"
                android:textSize="18sp"
                android:visibility="gone" />

            <android.widget.Button
                android:id="@+id/activityCreatePath_addimage"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_button_signin"
                android:button="@null"
                android:checked="true"
                android:stateListAnimator="@null"
                android:text="@string/activityCreateRoute_addimage"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/natour_white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/activityCreatePath_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:background="@color/natour_white"
                android:scaleType="centerInside"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/activityCreatePath_disability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:background="@color/natour_transparent"
                android:button="@null"
                android:checked="false"
                android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                android:drawablePadding="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/activityCreateRoute_disableOption"
                android:textColor="@color/natour_black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/activityCreateRoute_tags"
                    android:textColor="@color/natour_black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/activityCreatePath_addtag"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/background_add_tag"
                    android:hint="@string/activityCreateRoute_addtag"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="3dp"
                    android:singleLine="true"
                    android:textColor="@color/natour_grey"
                    android:textColorHint="@color/natour_grey"
                    android:textSize="13sp" />

            </LinearLayout>

            <me.gujun.android.taggroup.TagGroup
                android:id="@+id/tag_group"
                style="@style/TagGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp" />

            <android.widget.Button
                android:id="@+id/activityCreatePath_continue"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/background_button_signin"
                android:fontFamily="sans-serif"
                android:stateListAnimator="@null"
                android:text="@string/activityCreateRoute_continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>