<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motionlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    app:layoutDescription="@xml/activity_auth_scene">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/ic_logo"
        tools:layout_editor_absoluteX="105dp"
        tools:layout_editor_absoluteY="161dp" />

    <TextView
        android:id="@+id/logo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_bold"
        android:text="@string/app_name"
        android:textColor="@color/natour_black"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="372dp" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:text="@string/activityRun_slogan"
        android:textColor="@color/natour_black"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="441dp" />

    <android.widget.Button
        android:id="@+id/signin"
        android:layout_width="348dp"
        android:layout_height="61dp"
        android:alpha="0"
        android:background="@drawable/background_button_signin"
        android:fontFamily="@font/roboto_regular"
        android:stateListAnimator="@null"
        android:text="@string/activityRun_signin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="437dp" />

    <android.widget.Button
        android:id="@+id/signup"
        android:layout_width="348dp"
        android:layout_height="61dp"
        android:alpha="0"
        android:background="@drawable/background_button_signup"
        android:fontFamily="@font/roboto_regular"
        android:stateListAnimator="@null"
        android:text="@string/activityRun_noaccountyet"
        android:textAllCaps="false"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="509dp" />

</androidx.constraintlayout.motion.widget.MotionLayout>